<resources>

    <string name="app_name">XYZ Reader</string>
    <string name="welcome_xyz_reader">Welcome to XYZ Reader!</string>

    <string name="action_refresh">Refresh</string>
    <string name="action_refreshing">Refreshing…</string>
    <string name="action_refreshed">%d articles saved</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>

    <string name="up">Up</string>
    <string name="transition_photo">transition_photo</string>
    <string name="photo_content_description">Article\'s photo</string>
    
    <string name="test_article_title">Ebooks, Neither E, Nor Books</string>
    <string name="test_article_subtitle">Feb 12, 2004\nby Cory Doctorwow</string>
    <string name="test_article_author">by Cory Doctorwow</string>
    <string name="test_article_body">For starters, let me try to summarize the lessons and intuitions\r\nIve had about ebooks from my release of two novels and most of a\r\nshort story collection online under a Creative Commons license. A\r\nparodist who published a list of alternate titles for the\r\npresentations at this event called this talk, eBooks Suck Right\r\nNow, [eBooks suck right now] and as funny as that is, I dont\r\nthink its true.\r\n\r\nNo, if I had to come up with another title for this talk, Id\r\ncall it: Ebooks: Youre Soaking in Them. [Ebooks: Youre\r\nSoaking in Them] Thats because I think that the shape of ebooks\r\nto come is almost visible in the way that people interact with\r\ntext today, and that the job of authors who want to become rich\r\nand famous is to come to a better understanding of that shape.\r\n\r\nI havent come to a perfect understanding. I dont know what the\r\nfuture of the book looks like. But I have ideas, and Ill share\r\nthem with you:\r\n\r\n1. Ebooks arent marketing. [Ebooks arent marketing] OK, so\r\nebooks *are* marketing: that is to say that giving away ebooks\r\nsells more books. Baen Books, who do a lot of series publishing,\r\nhave found that giving away electronic editions of the previous\r\ninstallments in their series to coincide with the release of a\r\nnew volume sells the hell out of the new book — and the\r\nbacklist. And the number of people who wrote to me to tell me\r\nabout how much they dug the ebook and so bought the paper-book\r\nfar exceeds the number of people who wrote to me and said, Ha,\r\nha, you hippie,</string>

</resources>
