<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/card_margins"
    android:layout_marginTop="@dimen/card_margins"
    android:layout_marginRight="@dimen/card_margins"
    android:layout_marginBottom="@dimen/card_margins"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?selectableItemBackground"
    app:cardCornerRadius="@dimen/card_corner_radius"
    app:cardElevation="@dimen/card_elevation">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--suppress AndroidLintContentDescription -->
        <com.example.xyzreader.ui.DynamicHeightNetworkImageView
            android:id="@+id/thumbnail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/thumbnail_margins"
            android:layout_marginTop="@dimen/thumbnail_margins"
            android:layout_marginEnd="@dimen/thumbnail_margins"
            android:layout_marginBottom="@dimen/thumbnail_margins"
            android:background="@color/photo_placeholder"
            android:contentDescription="@string/photo_content_description"
            android:scaleType="fitXY"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/logo" />

        <TextView
            android:id="@+id/article_title"
            style="@style/MyTheme.Main.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="4dp"
            android:ellipsize="end"
            android:maxLines="4"
            android:textColor="@color/color_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/thumbnail"
            tools:text="@string/test_article_title" />

        <TextView
            android:id="@+id/article_subtitle"
            style="@style/MyTheme.Main.SubTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:textColor="@color/color_text"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/article_title"
            tools:text="@string/test_article_subtitle" />
    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>
